# boids

./: CMakeLists.txt
core/: CMakeLists.txt
core/include/: monitor.hpp  platform.hpp  shb_core.hpp  window.hpp
core/src/: window.cpp
include/: CMakeLists.txt  gui.hpp  includes.hpp  main.hpp  monitor.hpp  shb_core.h  window.hpp
scripts/: build.bat  configure.bat  debug.bat  run.bat
src/: CMakeLists.txt  gui_monitor.cpp  gui_window.cpp  main.cpp
windows_scripts/: configure.bat
